[gd_scene load_steps=6 format=3 uid="uid://c8aqfdvo8f3kj"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_dmf0e"]
[ext_resource type="Script" path="res://scripts/BokiNodeLayoutManager.gd" id="2_ln54v"]
[ext_resource type="Script" path="res://scripts/TutorialController.gd" id="3_g61ma"]
[ext_resource type="Script" path="res://scripts/TransactionVisualizer.gd" id="4_vs8mt"]
[ext_resource type="PackedScene" uid="uid://n1x7i2a7nfe0" path="res://scenes/TransactionIndicator.tscn" id="5_7d1yh"]

[node name="Main" type="Node2D"]
script = ExtResource("1_dmf0e")

[node name="World" type="Node2D" parent="."]

[node name="BokiNodeContainer" type="Node" parent="World"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TutorialPanel" type="PanelContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="UI/TutorialPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TutorialPanel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="UI/TutorialPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="UI/TutorialPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NextButton" type="Button" parent="UI"]
offset_left = 38.0
offset_top = 93.0
offset_right = 83.0
offset_bottom = 124.0
text = "Next"

[node name="BokiNodeLayoutManager" type="Node" parent="."]
script = ExtResource("2_ln54v")

[node name="TutorialController" type="Node" parent="."]
script = ExtResource("3_g61ma")

[node name="TransactionVisualizer" type="Node" parent="."]
script = ExtResource("4_vs8mt")
transaction_indicator_scene = ExtResource("5_7d1yh")
